[package]
name = "goedesearch"
version = "0.1.0"
authors = ["R. Tyler Croy <rtyler@brokenco.de>"]
edition = "2018"

[dependencies]
crc = "1"
flate2 = { version = "1", features = ["zlib-ng-compat"], default-features = false }
gumdrop = "0.8"
log = "*"
quick-xml = { version = "0.22", features = ["serialize", "encoding"] }
rust-stemmers = "1"
serde = { version = "1", features = ["derive"] }
url = { version = "2", features = ["serde"] }

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
incremental = false
opt-level = "z"
